# 22s-pa01-kas-and-clayton

./: .gitignore  CMakeLists.txt  Driver.h  Painting.cpp  Painting.h  README.md  Wall.cpp  Wall.h
.github/Workflow/: build.yaml
Input/: 100000Sample.txt  sample.txt
Input/LargeDataSets/: 10000Sample.txt  1000Sample.txt
src/: Driver.cpp  Driver.h  Painting.cpp  Painting.h  Wall.cpp  Wall.h  main.cpp
